--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@pilab/ion-sdk-js",
-  "version": "1.8.3",
+  "version": "1.8.3-2",
   "description": "A JS SDK for ion-sfu or ion / forked by Progressive Innovation LAB",
   "type": "module",
-  "main": "lib/index.mjs",
-  "types": "lib/index.d.mts",
+  "main": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "module": "dist/index.js",
   "files": [
     "dist/*"
