--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@pilab/ion-sdk-js",
-  "version": "1.8.3-4",
+  "version": "1.8.4",
   "description": "A JS SDK for ion-sfu or ion / forked by Progressive Innovation LAB",
-  "type": "module",
-  "main": "dist/index.mjs",
+  "type": "commonjs",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "module": "dist/index.js",
+  "module": "dist/index.mjs",
   "files": [
     "dist/*"
   ],
